<resources>
    <string name="app_name"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_crear_venta">CrearVentaActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hint_autocompletar">Insertar Cédula o Nombre Completo</string>
    <string name="title_activity_main">Ventas</string>
    <string name="title_registro_cliente">Registrar Cliente</string>
    <string name="title_registrar_venta">Registrar Venta</string>
    <string name="title_registrar_producto">Registrar Producto</string>
    <string name="title_consultar_venta_cliente">Ventas-Cliente</string>
    <string name="title_consultar_venta">Consultar Ventas</string>
    <string name="title_activity_main2">Ventas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
</resources>
