<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_registro_cliente" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_registrar_venta" />

    <item
        android:id="@+id/navigation_registrar_producto"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_registrar_producto" />
    <item
        android:id="@+id/navigation_consultar_venta_cliente"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_consultar_venta_cliente" />
    <item
        android:id="@+id/navigation_consultar_ventas"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_consultar_venta" />

</menu>
